syntax = "proto3";
package sorting;

import "common.proto";

message RegisterRequest {
  NodeAddress workerAddress = 1;
}

message RegisterReply {
  int32 assignedState = 1;
  WorkerEndpoint workerEndpoint = 2;
  repeated ProtoKey splitters = 3;
  repeated WorkerEndpoint allWorkerEndpoints = 4;
}

message SampleRequest {
  WorkerEndpoint workerEndpoint = 1;
  repeated ProtoKey samples = 2;
}

message SampleReply {
  bool ack = 1;
}

message HeartbeatRequest {
  WorkerEndpoint workerEndpoint = 1;
}

message HeartbeatReply {
  ProtoWorkerState state = 1;
}

message PhaseCompleteRequest {
  WorkerEndpoint workerEndpoint = 1;
  ProtoWorkerState phase = 2;
}

message PhaseCompleteReply {
  bool ack = 1;
}

message GetGlobalStateRequest {
  WorkerEndpoint workerEndpoint = 1;
}

message GetGlobalStateReply {
  repeated ProtoKey splitters = 1;
  repeated WorkerEndpoint allWorkerEndpoints = 2;
}

service MasterService {
  rpc RegisterWorker (RegisterRequest) returns (RegisterReply);
  rpc SubmitSamples (SampleRequest) returns (SampleReply);

  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatReply);
  rpc GetGlobalState (GetGlobalStateRequest) returns (GetGlobalStateReply);

  rpc NotifyPhaseComplete (PhaseCompleteRequest) returns (PhaseCompleteReply);
}